# Audio-CNN

./: .gitignore  README.md  main.py  model.py  package-lock.json  pyproject.toml  requirements.txt  train.py
cnn-visualizer/: .env.example  README.md  package-lock.json  package.json
cnn-visualizer/src/: env.js
cnn-visualizer/src/app/: page.tsx
cnn-visualizer/src/components/: Waveform.tsx
